--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,37 @@
-*.class
+# Ignore Rundirs.
+run/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Ignore IDE Files.
+eclipse/
+.nb-gradle/
+.idea/
+.nb-gradle-properties
+.classpath
+.project
+.settings/
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Ignore Gradle Stuff
+gradle.properties
+.gradle/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Ignore Git
+.git/
+
+# Ignore Build Files
+build/
+dist/
+out/
+logs/
+bin/
+
+*.iml
+*.ipr
+*.iws
+Schematic_to_Java*
+schematics/
+
+# Ignore Dependencies
+libs/
+AgriCraft_Dependencies.rar
+dependencies.zip
+*.bak
